fixed z-index bug in sideBar

--- a/src/components/sidebar/sidebar.scss
+++ b/src/components/sidebar/sidebar.scss
@@ -4,6 +4,7 @@
   align-items: center;
   background-color: white;
   color: black;
+  z-index: 998;
   .bg {
     position: fixed;
     top: 0;
